--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -13,13 +13,13 @@
 
         <action
             android:id="@+id/action_HomeFragment_to_HomeSecondFragment"
-            app:destination="@id/nav_home_second" />
+            app:destination="@id/nav_menu_create" />
     </fragment>
     <fragment
-        android:id="@+id/nav_home_second"
-        android:name="com.projek_tugas_akhir.arsitektur_mvvm_dan_greendao.ui.home.HomeSecondFragment"
-        android:label="@string/home_second"
-        tools:layout="@layout/fragment_home_second">
+        android:id="@+id/nav_menu_create"
+        android:name="com.projek_tugas_akhir.arsitektur_mvvm_dan_greendao.ui.create.MenuCreateFragment"
+        android:label="@string/menu_create"
+        tools:layout="@layout/fragment_menu_create">
         <action
             android:id="@+id/action_HomeSecondFragment_to_HomeFragment"
             app:destination="@id/nav_home" />
