--- a/app/src/main/res/layout/fragment_menu_insert.xml
+++ b/app/src/main/res/layout/fragment_menu_insert.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.create.MenuCreateFragment">
+    tools:context=".ui.create.MenuInsertFragment">
 
     <TextView
         android:id="@+id/text_execution_time"
