--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -17,9 +17,9 @@
     </fragment>
     <fragment
         android:id="@+id/nav_menu_create"
-        android:name="com.projek_tugas_akhir.arsitektur_mvvm_dan_greendao.ui.create.MenuCreateFragment"
+        android:name="com.projek_tugas_akhir.arsitektur_mvvm_dan_greendao.ui.create.MenuInsertFragment"
         android:label="@string/menu_create"
-        tools:layout="@layout/fragment_menu_create">
+        tools:layout="@layout/fragment_menu_insert">
         <action
             android:id="@+id/action_HomeSecondFragment_to_HomeFragment"
             app:destination="@id/nav_home" />
