--- a/app/src/main/res/layout/select_fragment.xml
+++ b/app/src/main/res/layout/select_fragment.xml
@@ -9,7 +9,7 @@
 
         <variable
             name="viewModel"
-            type="com.projek_tugas_akhir.arsitektur_mvvm_dan_greendao.ui.crud.select.SelectViewModel" />
+            type="com.projek_tugas_akhir.arsitektur_mvvm_dan_greendao.ui.crud.CRUDViewModel" />
 
     </data>
 
@@ -23,13 +23,84 @@
             android:gravity="center"
             android:orientation="vertical">
 
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/selectRecyclerView"
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
 
-                tools:listitem="@layout/item_view" />
-<!--            app:adapter="@{viewModel.hospitalLiveData}"-->
+                <TextView
+                    android:id="@+id/textViewRecord"
+                    android:layout_width="0dp"
+                    android:layout_weight="1"
+                    android:layout_height="match_parent"
+                    android:layout_marginTop="5dp"
+                    android:paddingLeft="15dp"
+                    android:layout_marginRight="10dp"
+                    android:text="@{viewModel.numOfRecord != null ? `RECORD : ` + viewModel.numOfRecord : `RECORD : 0`}"
+                    tools:text="RECORD : XXXXXX"/>
+
+                <TextView
+                    android:id="@+id/textViewTime"
+                    android:layout_width="0dp"
+                    android:layout_weight="1"
+                    android:layout_height="match_parent"
+                    android:layout_marginTop="5dp"
+                    android:paddingRight="15dp"
+                    android:layout_marginLeft="10dp"
+                    android:gravity="end"
+                    android:text="@{viewModel.executionTime != null ? `TIME (MS) : ` + viewModel.executionTime : `TIME (MS) : 0`}"
+                    tools:text="TIME (MS) : XXXXXX"/>
+
+            </LinearLayout>
+
+            <FrameLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/selectRecyclerView"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:paddingBottom="80dp"
+                    app:adapter="@{viewModel.medicalListLiveData}"
+                    tools:listitem="@layout/item_view" />
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="80dp"
+                    android:layout_gravity="bottom"
+                    android:orientation="horizontal">
+
+                    <com.google.android.material.textfield.TextInputEditText
+                        android:id="@+id/editTextNumData"
+                        android:layout_width="0dp"
+                        android:layout_weight="1"
+                        android:layout_height="match_parent"
+                        android:layout_margin="5dp"
+                        android:background="@drawable/input_border_bottom"
+                        android:cursorVisible="true"
+                        android:gravity="center"
+                        android:inputType="text"
+                        android:maxLength="11"
+                        android:textColor="@color/black_effective"
+                        android:textSize="18sp"
+                        android:hint="@string/num_of_data"
+                        tools:text="Num Of Data"/>
+
+                    <Button
+                        android:id="@+id/btnExecute"
+                        style="@style/Button.Primary"
+                        android:layout_width="0dp"
+                        android:layout_weight="1"
+                        android:layout_height="match_parent"
+                        android:layout_margin="5dp"
+                        android:onClick="@{() -> viewModel.onClick()}"
+                        android:text="@string/execute"
+                        tools:text="EXECUTE"/>
+
+                </LinearLayout>
+
+            </FrameLayout>
 
         </LinearLayout>
 
@@ -38,8 +109,8 @@
             style="?android:attr/progressBarStyleLarge"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"/>
-<!--            android:visibility="@{viewModel.isLoading ? View.VISIBLE : View.GONE}" />-->
+            android:layout_gravity="center"
+            android:visibility="@{viewModel.isLoading ? View.VISIBLE : View.GONE}" />
     </FrameLayout>
 
 </layout>
