--- a/app/src/main/res/layout/item_empty_view.xml
+++ b/app/src/main/res/layout/item_empty_view.xml
@@ -18,18 +18,19 @@
         android:orientation="vertical">
 
         <TextView
-            android:id="@+id/tv_message"
+            android:id="@+id/tvMessage"
             style="@style/TextStyle.Title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_marginTop="16dp"
             android:gravity="center"
+            android:visibility="gone"
             android:text="@string/empty_screen"
             android:textColor="@color/gray" />
 
         <Button
-            android:id="@+id/btn_retry"
+            android:id="@+id/btnRetry"
             style="@style/Button.Primary.Quiz.Empty"
             android:layout_width="150dp"
             android:layout_height="wrap_content"
