Sixth Working Application (To Two Column Table Data)

--- a/app/src/main/res/layout/fragment_update.xml
+++ b/app/src/main/res/layout/fragment_update.xml
@@ -58,7 +58,7 @@
                 android:layout_height="match_parent">
 
                 <androidx.recyclerview.widget.RecyclerView
-                    android:id="@+id/deleteRecyclerView"
+                    android:id="@+id/updateRecyclerView"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:paddingBottom="80dp"
