--- a/app/src/main/res/layout/fragment_update.xml
+++ b/app/src/main/res/layout/fragment_update.xml
@@ -9,7 +9,7 @@
 
         <variable
             name="viewModel"
-            type="com.projek_tugas_akhir.arsitektur_mvvm_dan_greendao.ui.crud.CRUDViewModel" />
+            type="com.projek_tugas_akhir.arsitektur_mvvm_dan_greendao.ui.crud.update.UpdateViewModel" />
 
     </data>
 
@@ -63,7 +63,7 @@
                     android:layout_height="match_parent"
                     android:paddingBottom="80dp"
                     app:adapterUpdate="@{viewModel.medicalListLiveData}"
-                    tools:listitem="@layout/item_view" />
+                    tools:listitem="@layout/item_update_view" />
 
                 <LinearLayout
                     android:layout_width="match_parent"
