--- a/app/src/main/res/layout/item_delete_empty_view.xml
+++ b/app/src/main/res/layout/item_delete_empty_view.xml
@@ -6,7 +6,7 @@
 
         <variable
             name="viewModel"
-            type="com.projek_tugas_akhir.arsitektur_mvvm_dan_greendao.ui.crud.CRUDEmptyItemViewModel" />
+            type="com.projek_tugas_akhir.arsitektur_mvvm_dan_greendao.ui.crud.delete.DeleteEmptyItemViewModel" />
 
     </data>
 
