Add action button for scroll to last index in list.

--- a/app/src/main/res/layout/fragment_select.xml
+++ b/app/src/main/res/layout/fragment_select.xml
@@ -100,6 +100,15 @@
 
                 </LinearLayout>
 
+                <com.google.android.material.floatingactionbutton.FloatingActionButton
+                    android:id="@+id/fabDown"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/ic_menu_slideshow"
+                    android:layout_marginLeft="20dp"
+                    android:layout_marginBottom="100dp"
+                    android:layout_gravity="bottom"/>
+
             </FrameLayout>
 
         </LinearLayout>
@@ -111,6 +120,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:visibility="@{viewModel.isLoading ? View.VISIBLE : View.GONE}" />
+
     </FrameLayout>
 
 </layout>
