--- a/app/src/main/res/layout/activity_crud.xml
+++ b/app/src/main/res/layout/activity_crud.xml
@@ -26,7 +26,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 app:subtitleTextColor="@color/white"
-                app:title="CRUD"
+                app:title="@string/app_name"
                 app:titleTextAppearance="@style/Toolbar.TitleText"
                 app:titleTextColor="@color/white" />
 
